a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/missingDeclaration.min
#missin declaration
y = y + 3;

